--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-data filter=lfs diff=lfs merge=lfs -text
-images filter=lfs diff=lfs merge=lfs -text
-
 *.ipynb filter=nbstripout
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.tsv filter=lfs diff=lfs merge=lfs -text
