--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,5 +25,6 @@ dependencies = [
     "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "selenium>=4.40.0",
     "wordcloud>=1.9.6",
 ]
